fix: remove nodejs.pkg from nixpacks configuration

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,6 @@
 providers = ["node"]
 [phases.setup]
-nixPkgs = ["nodejs", "nodejs.pkg"]
+nixPkgs = ["nodejs"]
 
 [phases.install]
 cmds = ["npm install --omit=dev"]
